--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,26 @@ body{
   background: var(--mainGrey) !important;
   color: var(--mainBlack);
 }
+
+.main-link {
+  padding: 0.5rem 1rem;
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+  display: inline-block;
+  border-radius: 4px;
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  border: none;
+  transition: var(--mainTransition);
+}
+
+.main-link:hover {
+  background: var(--darkGrey);
+  text-decoration: none;
+  color: var(--primaryColor);
+  outline-color: var(--darkGrey);
+}
+
+.cart-icon{
+  cursor: pointer;
+}
